fix: issue with the image clipping on wide screens

--- a/src/pages/AboutUs/Aboutus.scss
+++ b/src/pages/AboutUs/Aboutus.scss
@@ -13,7 +13,7 @@
   }
 
   @include common.desktop-specific {
-    margin-top: unset;
+    margin-top: 40px;
   }
 
   &-top {
